frontend/tests/cases/negative/security/leakSec.gr
fooa : Int [Hi] → Int [Lo]
fooa [x] = [x]
            -- x : Private but Public * Private = Public
            -- i.e. cannot leak
